--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,24 @@ channels:
 dependencies:
 - _libgcc_mutex=0.1=conda_forge
 - _openmp_mutex=4.5=2_kmp_llvm
+- aiohttp=3.9.1=py311h459d7ec_0
+- aiosignal=1.3.1=pyhd8ed1ab_0
+- astroid=3.0.1=py311h38be061_0
+- attrs=23.1.0=pyh71513ae_1
+- black=23.11.0=py311h38be061_0
+- blackd=23.11.0=hd8ed1ab_0
 - bzip2=1.0.8=hd590300_5
 - ca-certificates=2023.11.17=hbcca054_0
+- click=8.1.7=unix_pyh707e725_0
+- colorama=0.4.6=pyhd8ed1ab_0
+- coverage=7.3.2=py311h459d7ec_0
+- dill=0.3.7=pyhd8ed1ab_0
+- exceptiongroup=1.2.0=pyhd8ed1ab_0
+- frozenlist=1.4.0=py311h459d7ec_1
 - icu=73.2=h59595ed_0
+- idna=3.6=pyhd8ed1ab_0
+- iniconfig=2.0.0=pyhd8ed1ab_0
+- isort=5.12.0=pyhd8ed1ab_1
 - joblib=1.3.2=pyhd8ed1ab_0
 - ld_impl_linux-64=2.40=h41732ed_0
 - libblas=3.9.0=20_linux64_openblas
@@ -29,15 +44,24 @@ dependencies:
 - libzlib=1.2.13=hd590300_5
 - llvm-openmp=17.0.6=h4dfa4b3_0
 - llvmlite=0.41.1=py311ha6695c7_0
+- mccabe=0.7.0=pyhd8ed1ab_0
 - mkl=2023.2.0=h84fe81f_50496
+- multidict=6.0.4=py311h459d7ec_1
+- mypy_extensions=1.0.0=pyha770c72_0
 - ncurses=6.4=h59595ed_2
 - numba=0.58.1=py311h96b013e_0
 - numpy=1.26.2=py311h64a7726_0
 - openssl=3.2.0=hd590300_1
 - packaging=23.2=pyhd8ed1ab_0
 - pandas=2.1.3=py311h320fe9a_0
+- pathspec=0.11.2=pyhd8ed1ab_0
 - patsy=0.5.4=pyhd8ed1ab_0
 - pip=23.3.1=pyhd8ed1ab_0
+- platformdirs=4.1.0=pyhd8ed1ab_0
+- pluggy=1.3.0=pyhd8ed1ab_0
+- pylint=3.0.2=pyhd8ed1ab_0
+- pytest=7.4.3=pyhd8ed1ab_0
+- pytest-cov=4.1.0=pyhd8ed1ab_0
 - python=3.11.6=hab00c5b_0_cpython
 - python-dateutil=2.8.2=pyhd8ed1ab_0
 - python-tzdata=2023.3=pyhd8ed1ab_0
@@ -52,8 +76,13 @@ dependencies:
 - tbb=2021.10.0=h00ab1b0_2
 - threadpoolctl=3.2.0=pyha21a80b_0
 - tk=8.6.13=noxft_h4845f30_101
+- toml=0.10.2=pyhd8ed1ab_0
+- tomli=2.0.1=pyhd8ed1ab_0
+- tomlkit=0.12.3=pyha770c72_0
+- typing_extensions=4.8.0=pyha770c72_0
 - tzdata=2023c=h71feb2d_0
 - wheel=0.42.0=pyhd8ed1ab_0
 - xz=5.2.6=h166bdaf_0
+- yarl=1.9.3=py311h459d7ec_0
 - zstd=1.5.5=hfc55251_0
 
