--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[metadata]
+name = delaynet
+
+[options]
+packages = find:
+
 # Linting
 [pylint.BASIC]
 # Regular expression matching correct module names. Overrides module-naming-
@@ -14,7 +20,7 @@ max-line-length = 88
 # Testing
 [tool:pytest]
 minversion = 7.0
-addopts = -ra
+addopts = -ra --cov=delaynet
 testpaths = tests
 
 [coverage:run]
