Tests: Specified runners - Coverage setup independent of pytest, for Pycharm compatibility
Remove version test

Generate coverage files in test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -110,7 +110,7 @@ jobs:
 
       - name: "Run tests ${{ matrix.submodule.name }} with coverage"
         run: |
-          pytest ${{ matrix.submodule.pytest_args }}
+          pytest ${{ matrix.submodule.pytest_args }} --cov=delaynet
         env:
           COVERAGE_FILE: ".coverage.${{ matrix.submodule.name }}"
 
