--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -72,7 +72,7 @@ jobs:
         run: python -m ipykernel install --user --name sb_env --display-name "Python (sb_env)"
 
       - name: Generating .rst files
-        run: sphinx-apidoc -o docs/api/ superblockify/
+        run: sphinx-apidoc -o docs/api/ delaynet/
       - name: Generating html
         run: sphinx-build docs public -b dirhtml
 
