--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,64 +18,40 @@ jobs:
   caching:
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            label: linux-64
-            prefix: /usr/share/miniconda3/envs/my-env
-    # For later compatibility with Windows and macOS:
-    #          - os: macos-latest
-    #            label: osx-64
-    #            prefix: /Users/runner/miniconda3/envs/my-env
-    #
-    #          - os: windows-latest
-    #            label: win-64
-    #            prefix: C:\Miniconda3\envs\my-env
+        python-version: ["3.10", "3.11", "3.12"]
+        os: [ubuntu-latest]
+      fail-fast: false
 
-    name: Cache for ${{ matrix.label }}
+    name: Cache for ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Mambaforge
-        uses: conda-incubator/setup-miniconda@v3
+      - name: Get week number
+        run: echo "WEEK=$(date +'%V')" >> $GITHUB_ENV
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: mamba-org/setup-micromamba@v1
         with:
-          miniforge-variant: Mambaforge
-          miniforge-version: latest
-          activate-environment: delay_net
-          use-mamba: true
-
-      - name: Show environment info
-        run: |
-          conda info
-          conda list
-
-      - name: Cache Conda env
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.CONDA }}/envs
-          key:
-            conda-${{ runner.os }}--${{ runner.arch }}--${{
-            hashFiles('environment.yml') }}-${{ env.CACHE_NUMBER }}
-        env:
-          # Increase this value to reset cache if etc/example-environment.yml has not changed
-          CACHE_NUMBER: 0
-        id: cache
-
-      - name: Update environment
-        run: # Install if cache not found
-          mamba env update -n delay_net -f environment.yml
-        if: steps.cache.outputs.cache-hit != 'true'
+          environment-name: delay_net
+          create-args: >-
+            python=${{ matrix.python-version }}
+            --file requirements.txt
+          cache-environment: true
+          cache-environment-key: py${{ matrix.python-version }}-${{ runner.os }}-W${{ env.WEEK }}-${{ hashFiles('requirements.txt') }}
 
   run-tests:
     needs: caching
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+        os: [ubuntu-latest]
         submodule:
           - { name: "All Tests", pytest_args: "tests/" }
+      fail-fast: false
 
-    name: ${{ matrix.submodule.name }}
+    name: ${{ matrix.submodule.name }} (${{ matrix.python-version }} on ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
     defaults:
       run:
         shell: bash -el {0}
@@ -83,38 +59,34 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Mambaforge
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniforge-variant: Mambaforge
-          miniforge-version: latest
-          activate-environment: delay_net
-          use-mamba: true
+      - name: Get week number
+        id: week
+        run: echo "WEEK=$(date +'%V')" >> $GITHUB_ENV
 
-      - name: Use cache for ${{ matrix.submodule.name }}
-        uses: actions/cache@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: mamba-org/setup-micromamba@v1
         with:
-          path: ${{ env.CONDA }}/envs
-          fail-on-cache-miss: true
-          key:
-            conda-${{ runner.os }}--${{ runner.arch }}--${{
-            hashFiles('environment.yml') }}-${{ env.CACHE_NUMBER }}
-        env:
-          CACHE_NUMBER: 0  # Same as in caching job
+          environment-name: delay_net
+          create-args: >-
+            python=${{ matrix.python-version }}
+            --file requirements.txt
+          cache-environment: true
+          cache-environment-key: py${{ matrix.python-version }}-${{ runner.os }}-W${{ env.WEEK }}-${{ hashFiles('requirements.txt') }}
 
-      - name: Show environment info
+      - name: "Run tests ${{ matrix.submodule.name }}"
+        if: matrix.python-version != '3.12' || matrix.os != 'ubuntu-latest'
         run: |
-          conda info
-          conda list
-          conda config --show
+          pytest ${{ matrix.submodule.pytest_args }}
 
       - name: "Run tests ${{ matrix.submodule.name }} with coverage"
+        if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
         run: |
           pytest ${{ matrix.submodule.pytest_args }} --cov=delaynet
         env:
           COVERAGE_FILE: ".coverage.${{ matrix.submodule.name }}"
 
       - name: Store coverage file
+        if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
           name: coverage
@@ -122,8 +94,12 @@ jobs:
 
   coverage:
     name: Merge Coverage
-    runs-on: ubuntu-latest
     needs: run-tests
+    strategy:
+      matrix:
+        python-version: ["3.12"]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     defaults:
       run:
         shell: bash -el {0}
