--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,16 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Scientific/Engineering :: Information Analysis",
     "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Operating System :: OS Independent",
     "Natural Language :: English",
     "Private :: Do Not Upload", # Remove this line to upload to PyPI
 ]
 dynamic = ["readme", "version"]
-requires-python = "~=3.11"
+requires-python = ">=3.10"
 dependencies = [
     "numpy",
     "scipy",
