Granger: Rework bidirectional version - Add description of GC - Add bibliography for doc `sphinxcontrib.bibtex`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ Changelog = "https://cbueth.de/delaynet/changelog"
 [project.optional-dependencies]
 dev = ["black", "isort", "pylint"]
 test = ["pytest", "pytest-cov", "coverage"]
-doc = ["sphinx", "myst-nb", "sphinx-book-theme"]
+doc = ["sphinx", "myst-nb", "sphinx-book-theme", "sphinxcontrib-bibtex"]
 plot = ["matplotlib"]
 all = ["delaynet[dev,test,doc,plot]"]
 
