--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
         if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage.${{ matrix.submodule.name }}
           path: ".coverage.${{ matrix.submodule.name }}"
 
   coverage:
@@ -112,7 +112,9 @@ jobs:
         uses: actions/download-artifact@v4
         id: download
         with:
-          name: 'coverage'
+          path: coverage
+          pattern: 'coverage.*'
+          merge-multiple: true
 
       - name: Install coverage
         run: pip install coverage
