CI: Add scheduled tests and fix coverage combine

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ on:
   pull_request:
     branches:
       - '**'
+  schedule: # Every Monday at 04:00 UTC
+    - cron: '0 4 * * 1'
 
 jobs:
   caching:
@@ -81,7 +83,7 @@ jobs:
       - name: "Run tests ${{ matrix.submodule.name }} with coverage"
         if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
         run: |
-          pytest ${{ matrix.submodule.pytest_args }} --cov=delaynet
+          pytest --cov=delaynet ${{ matrix.submodule.pytest_args }}
         env:
           COVERAGE_FILE: ".coverage.${{ matrix.submodule.name }}"
 
@@ -89,7 +91,7 @@ jobs:
         if: matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
         with:
-          name: coverage.${{ matrix.submodule.name }}
+          name: coverage-${{ matrix.submodule.name }}
           path: ".coverage.${{ matrix.submodule.name }}"
 
   coverage:
@@ -113,14 +115,14 @@ jobs:
         id: download
         with:
           path: coverage
-          pattern: 'coverage.*'
+          pattern: 'coverage-*'
           merge-multiple: true
 
       - name: Install coverage
         run: pip install coverage
 
       - name: Merge coverage files
-        run: coverage combine
+        run: coverage combine coverage/
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v4
