--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,8 +50,8 @@ jobs:
         run: pip install pylint
 
       - name: Lint Source Code
-        run: pylint -d E0401,W0511 delaynet/
+        run: pylint -d E0401,W0511,R0917 delaynet/
         # ignore import-errors first, analyze later with tests in anaconda environment
 
       - name: Lint Tests
-        run: pylint -d E0401,W0511 tests/
+        run: pylint -d E0401,R0917 tests/
