--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,14 +1,13 @@
 name: Docs
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'delaynet/**'
-      - 'docs/**'
-      - 'setup.cfg'
-
+#  push:
+#    branches:
+#      - main
+#    paths:
+#      - 'delaynet/**'
+#      - 'docs/**'
+#      - 'setup.cfg'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
