--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
 name: Lint
 
 on:
-  push:
-    paths:
-      - 'delaynet/**.py'
-      - 'tests/**.py'
+#  push:
+#    paths:
+#      - 'delaynet/**.py'
+#      - 'tests/**.py'
 
 
 jobs:
