--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
 
 before_script:
   - micromamba install -y -n base -c conda-forge python=${PYTHON_VERSION} -f requirements.txt
-  - pip install --index-url https://__token__:${INFOMEASURE_PKG_ACCESS}@gitlab.example.com/api/v4/projects/<project_id>/packages/pypi/simple --no-deps infomeasure
+  - pip install --index-url https://__token__:${INFOMEASURE_PKG_ACCESS}@gitlab.example.com/api/v4/projects/202/packages/pypi/simple --no-deps infomeasure
   - pip install --no-build-isolation --no-deps -e .
 
 # Test on all python versions on push to main branch, and on bi-weekly schedule
