--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "delaynet"
 authors = [{ name = "Carlson Büth" }, { name = "Massimiliano Zanin" }]
 maintainers = [{ name = "Carlson Büth" }]
 description = "Delay Propagation in Transportation Networks"
-keywords = ["delay propagation", "transportation networks", "traffic flow", "traffic assignment", "traffic simulation"]
+keywords = ["Delay Propagation", "Transportation Networks", "Tnformation Flow", "Information Theory"]
 license = { text = "BSD-3-Clause" }
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
@@ -18,9 +18,9 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Operating System :: OS Independent",
     "Natural Language :: English",
     "Private :: Do Not Upload", # Remove this line to upload to PyPI
@@ -33,6 +33,7 @@ dependencies = [
     "statsmodels",
     "scikit-learn",
     "numba",
+    "infomeasure>=0.4.0",
 ]
 
 [project.urls]
@@ -44,16 +45,13 @@ Changelog = "https://carlson.pages.ifisc.uib-csic.es/delaynet/changelog/"
 [project.optional-dependencies]
 lint = ["ruff"]
 test = ["pytest", "pytest-cov", "coverage"]
-doc = ["sphinx", "myst-nb", "sphinx-book-theme", "sphinxcontrib-bibtex"]
-plot = ["matplotlib"]
-all = ["delaynet[lint,test,doc,plot]"]
+doc = ["sphinx", "myst-nb", "sphinx-book-theme", "sphinxcontrib-bibtex", "matplotlib"]
+all = ["delaynet[lint,test,doc]"]
 
 [tool.setuptools.packages.find]
 exclude = [
     "examples*",
-    "data*",
     "docs*",
-    "tests*",
 ]
 namespaces = false
 
