--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,14 +24,24 @@ repos:
       - id: update-citation-version
         name: Update package version in CITATION.cff and docs/conf.py
         entry: >
-          sh -c '
-          if command -v pwsh >/dev/null 2>&1 || [ "$0" = "pwsh" ]; then
-            echo "Skipping in PowerShell";
+          sh -c 'if command -v pwsh >/dev/null 2>&1 || [ "$0" = "pwsh" ]; then
+              echo "Skipping in PowerShell";
           else
-            version=$(grep -oP "(?<=__version__ = \")[^\"]+" delaynet/_version.py) &&
-            sed -i "s/^version:.*/version: $version/" CITATION.cff &&
-            sed -i "s/^version =.*/version = \"$version\"/" docs/conf.py;
+              os_type=$(uname) &&
+              if [ "$os_type" = "Darwin" ]; then
+                  version=$(awk -F "\"" "/__version__/ {print \$2}" delaynet/_version.py) &&
+                  sed -i "" "s/^version: .*/version: $version/" CITATION.cff &&
+                  sed -i "" "s/^version = .*/version = \"$version\"/" docs/conf.py;
+              elif [ "$os_type" = "Linux" ]; then
+                  version=$(grep -oP "(?<=__version__ = \")[^\"]+" delaynet/_version.py) &&
+                  sed -i "s/^version: .*/version: $version/" CITATION.cff &&
+                  sed -i "s/^version = .*/version = \"$version\"/" docs/conf.py;
+              else
+                  echo "Unsupported OS type: $os_type";
+                  exit 1;
+              fi
           fi'
+
         language: system
         files: 'CITATION\.cff|delaynet/_version\.py|docs/conf\.py'
 
