--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ coverage:
 pages:
   stage: deploy
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - when: never  # if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
     - sphinx-apidoc -o docs/api/ delaynet/ -f
     - sphinx-build docs/ public -b dirhtml
