ci: update UV version to 0.8.4 and add Python 3.14rc1 with allow_failure
- Bump `UV_VERSION` to `0.8.4` in GitLab CI.
- Introduce Python 3.14 to the test matrix with `allow_failure` enabled.

Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  UV_VERSION: "0.5"
+  UV_VERSION: "0.8.4"
   PYTHON_VERSION: "3.13"
   BASE_LAYER: bookworm-slim
   # GitLab CI creates a separate mountpoint for the build directory,
@@ -27,7 +27,9 @@ stages:
 .pythonVersions:
   parallel:
     matrix:
-      - PY_VERSION: [ "3.13", "3.12", "3.11", "3.10" ]
+      - PY_VERSION: [ "3.14", "3.13", "3.12", "3.11" ]
+        allow_failure:
+          - PY_VERSION: "3.14"
   maxVersion:
     matrix:
       - PY_VERSION: [ "3.13" ]
