chore: update copyright year, README formatting, and `pyproject.toml` metadata
Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ exclude = [
 namespaces = false
 
 [tool.setuptools.dynamic]
-readme = { file = ["README.md", "LICENSE.txt"] }
+readme = { file = ["README.md", "LICENSE"], content-type = "text/markdown" }
 version = { attr = "delaynet._version.__version__" }
 
 # --------------------------------------------------------------------------------------
