--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,9 @@ stages:
 .pythonVersions:
   parallel:
     matrix:
-      - PY_VERSION: [ "3.14", "3.13", "3.12", "3.11" ]
-  allow_failure:
-    - PY_VERSION: "3.14"
+      - PY_VERSION: [ "3.13", "3.12", "3.11" ]
+  #  allow_failure:
+  #    - PY_VERSION: "3.14"
   maxVersion:
     matrix:
       - PY_VERSION: [ "3.13" ]
