Add demos and dataset: Functional delay network for SBB, update synthetic documentation
- Added new geojson data for Swiss long-distance train stations.
- Revised demos structure with additional entries.
- Updated python constraint in lockfile to `<3.14` for compatibility.

Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Natural Language :: English",
 ]
 dynamic = ["readme", "version"]
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "numpy",
     "scipy",
@@ -53,6 +53,8 @@ doc = [
     "sphinx-book-theme",
     "sphinxcontrib-bibtex",
     "matplotlib",
+    "networkx",
+    "contextily",
 ]
 all = ["delaynet[lint,test,doc]"]
 
