Add `geopandas` dependency to requirements and pyproject configuration
Signed-off-by: Carlson Büth <commit@cbueth.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ doc = [
     "sphinxcontrib-bibtex",
     "matplotlib",
     "networkx",
+    "geopandas",
     "contextily",
 ]
 all = ["delaynet[lint,test,doc]"]
